# oriented-pointcloud-msflow

./: .gitignore  README.md  pyproject.toml  run.py
results/: flower_data.json  rate_verification.csv  rate_verification.json  two_ellipses_data.json
results/ablation/: ablation_summary.csv  ablation_summary.json  cell1_none_data.json  cell2_coh_data.json  cell3_coh_redist_data.json  cell5_full_no_coh_data.json
scripts/examples/: animate_flower.py  run_two_ellipses_batch.py
scripts/experiments/: ablation_summary.py  perimeter_rate_verification.py  render_showcase_evolution.py  replay_history.py  run_ablation.sh
src/torch/math_utils/: __init__.py  angles.py  curvature.py  keops_pairwise.py  linalg.py  pairwise.py
src/torch/oriented_varifold/: __init__.py  mass.py  state.py
src/torch/perimeter/: __init__.py  angle_constraint.py  coherence_perimeter.py
src/torch/shapes/: __init__.py  arclength.py  curves.py  generator.py
src/torch/solver/: __init__.py  mm_solver.py  mm_step.py  redistribute.py  remove_dead_points.py
src/torch/transport/: __init__.py  bem_wasserstein.py
src/torch/visualization/: __init__.py  animation.py  coherence_diagnostic.py  core.py  static.py
tests/: test_angle_constraint.py  test_arclength.py  test_bem_wasserstein.py  test_integration.py  test_keops_parity.py  test_mass.py  test_mm_step.py  test_perimeter.py  test_shapes.py  test_solver.py  test_state.py
