[project]
name = "MSflow-oriented-varifold"
version = "0.1.0"
description = "Mullins-Sekerka flow via oriented point cloud varifolds"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.24,<2",
    "scipy<1.16",
    "matplotlib>=3.10.0",
    "torch>=2.6.0",
    "geomloss>=0.2.6",
    "pytorch-minimize>=0.0.2",
    "torchquad>=0.5.0",
    "nvitop>=1.6.1",
    "pytest>=9.0.2",
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "av>=17.0.1",
    "pykeops>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black>=24.0", "isort>=5.13"]
experiments = [
    "hydra-core>=1.3",
    "hydra-joblib-launcher>=1.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-m 'not panel'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "panel: panel BEM tests (unstable for non-convex shapes; skipped by default, opt in with -m panel)",
]

[dependency-groups]
dev = [
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
]
